--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.71.6",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.9.0",
     "react-redux": "^8.0.5",
     "styled-components": "^5.3.9"
   },
