--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "axios": "^1.3.5",
     "react": "18.2.0",
     "react-native": "0.71.6",
-    "react-native-linear-gradient": "^2.6.2",
+    "react-native-fast-image": "^8.6.3",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
